--- a/codeup-design.html
+++ b/codeup-design.html
@@ -3,17 +3,33 @@
 <head>
 
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/cu-design.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Codeup Design</title>
 
 </head>
 <body>
     <div class="container">
-        <div class="row"
-             <header class="col-12 ">
+        <div class="row">
+             <header class="text-center">
                  <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
                  <h2>FROM PARK CITY, UTAH</h2>
+             <section class="d-flex justify-content-center">
+                <div class="rounded-circle myrounded-circle circle-red">
+                    test
+                </div>
+                 <div class="rounded-circle myrounded-circle circle-yel">
+                     test
+                 </div>
+                 <div class="rounded-circle myrounded-circle circle-grn">
+                     test
+                 </div>
+                 <div class="rounded-circle myrounded-circle circle-blu">
+                     test
+                 </div>
+             </section>
              </header>
+        </div>
     </div>
 
 
