--- a/codeup-design.html
+++ b/codeup-design.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <div class="container">
+    <div class="container pg-background">
         <div class="row">
              <header class="text-center">
                  <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
