--- a/codeup-design.html
+++ b/codeup-design.html
@@ -10,25 +10,29 @@
 </head>
 <body>
     <div class="container pg-background">
-        <div class="row">
+        <div class="row ">
              <header class="text-center">
                  <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
+                 <br>
                  <h2>FROM PARK CITY, UTAH</h2>
-             <section class="d-flex justify-content-center">
-                <div class="rounded-circle myrounded-circle circle-red">
-                    test
-                </div>
-                 <div class="rounded-circle myrounded-circle circle-yel">
-                     test
-                 </div>
-                 <div class="rounded-circle myrounded-circle circle-grn">
-                     test
-                 </div>
-                 <div class="rounded-circle myrounded-circle circle-blu">
-                     test
-                 </div>
-             </section>
              </header>
+            <div class="row justify-content-center">
+                <div class="col-3 rounded-circle myrounded-circle circle-red d-flex flex-column justify-content-center align-items-center">
+                    <p>DESIGN</p>
+                </div>
+                 <div class="col-3 rounded-circle myrounded-circle circle-yel d-flex flex-column justify-content-center align-items-center">
+                     <p>DEVELOP</p>
+                 </div>
+                <div class="w-100"></div>
+                 <div class="col-3 rounded-circle myrounded-circle circle-grn d-flex flex-column justify-content-center align-items-center">
+                     <p>SUPPORT</p>
+                 </div>
+                 <div class="col-3 rounded-circle myrounded-circle circle-blu d-flex flex-column justify-content-center align-items-center">
+                     <p>HOST</p>
+                 </div>
+
+            </div>
+
         </div>
     </div>
 
