--- a/codeup-design.html
+++ b/codeup-design.html
@@ -4,40 +4,43 @@
 
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/cu-design.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Codeup Design</title>
 
 </head>
 <body>
     <div class="container pg-background">
-        <div class="row ">
-             <header class="text-center">
-                 <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
-                 <br>
-                 <h2>FROM PARK CITY, UTAH</h2>
-             </header>
-            <div class="row justify-content-center">
-                <div class="col-3 rounded-circle myrounded-circle circle-red d-flex flex-column justify-content-center align-items-center">
-                    <p>DESIGN</p>
+        <div class="container row justify-content-center">
+            <header>
+                <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
+                <br>
+                <h2>FROM PARK CITY, UTAH</h2>
+            </header>
+            <div class="col-6 col-md-3">
+                <div>
+                    <div class="rounded-circle myrounded-circle circle-red d-flex flex-column justify-content-center align-items-center">
+                        <p>DESIGN</p>
+                    </div>
+                    <div class="rounded-circle myrounded-circle circle-yel d-flex flex-column justify-content-center align-items-center">
+                        <p>DEVELOP</p>
+                    </div>
+                    <div class="w-100"></div>
+                    <div class="rounded-circle myrounded-circle circle-grn d-flex flex-column justify-content-center align-items-center">
+                        <p>SUPPORT</p>
+                    </div>
+                    <div class="rounded-circle myrounded-circle circle-blu d-flex flex-column justify-content-center align-items-center">
+                        <p>HOST</p>
+                    </div>
                 </div>
-                 <div class="col-3 rounded-circle myrounded-circle circle-yel d-flex flex-column justify-content-center align-items-center">
-                     <p>DEVELOP</p>
-                 </div>
-                <div class="w-100"></div>
-                 <div class="col-3 rounded-circle myrounded-circle circle-grn d-flex flex-column justify-content-center align-items-center">
-                     <p>SUPPORT</p>
-                 </div>
-                 <div class="col-3 rounded-circle myrounded-circle circle-blu d-flex flex-column justify-content-center align-items-center">
-                     <p>HOST</p>
-                 </div>
-
             </div>
 
         </div>
-    </div>
+</div>
 
 
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 </html>
