--- a/codeup-design.html
+++ b/codeup-design.html
@@ -17,22 +17,21 @@
                 <br>
                 <h2>FROM PARK CITY, UTAH</h2>
             </header>
-            <div class="col-6 col-md-3">
-                <div>
-                    <div class="rounded-circle myrounded-circle circle-red d-flex flex-column justify-content-center align-items-center">
-                        <p>DESIGN</p>
-                    </div>
-                    <div class="rounded-circle myrounded-circle circle-yel d-flex flex-column justify-content-center align-items-center">
-                        <p>DEVELOP</p>
-                    </div>
-                    <div class="w-100"></div>
-                    <div class="rounded-circle myrounded-circle circle-grn d-flex flex-column justify-content-center align-items-center">
-                        <p>SUPPORT</p>
-                    </div>
-                    <div class="rounded-circle myrounded-circle circle-blu d-flex flex-column justify-content-center align-items-center">
-                        <p>HOST</p>
-                    </div>
+            <div class="row justify-content-center">
+                <div class="col-3 rounded-circle myrounded-circle circle-red d-flex flex-column justify-content-center align-items-center">
+                    <p>DESIGN</p>
                 </div>
+                <div class="col-3 rounded-circle myrounded-circle circle-yel d-flex flex-column justify-content-center align-items-center">
+                    <p>DEVELOP</p>
+                </div>
+                <div class="w-100"></div>
+                <div class="col-3 rounded-circle myrounded-circle circle-grn d-flex flex-column justify-content-center align-items-center">
+                    <p>SUPPORT</p>
+                </div>
+                <div class="col-3 rounded-circle myrounded-circle circle-blu d-flex flex-column justify-content-center align-items-center">
+                    <p>HOST</p>
+                </div>
+
             </div>
 
         </div>
