Lower sectio0n in work

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -35,6 +35,36 @@
             </div>
 
         </div>
+        <div class="d-flex flex-column align-items-center">
+            <hr class="d-none d-md-block">
+            <p>Selected Work</p>
+            <div class="card" style="width: 18rem;">
+                <img src="img/apple-ipad.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="img/macbook.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="img/man.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="img/security.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+            </div>
+
+
+         </div>
 </div>
 
 
