--- a/codeup-design.html
+++ b/codeup-design.html
@@ -18,46 +18,62 @@
                 <h2>FROM PARK CITY, UTAH</h2>
             </header>
             <div class="row justify-content-center">
-                <div class="col-3 rounded-circle myrounded-circle circle-red d-flex flex-column justify-content-center align-items-center">
+                <div class="col-3 rounded-circle mybigrounded-circle circle-red d-flex flex-column justify-content-center align-items-center">
                     <p>DESIGN</p>
                 </div>
-                <div class="col-3 rounded-circle myrounded-circle circle-yel d-flex flex-column justify-content-center align-items-center">
+                <div class="col-3 rounded-circle mybigrounded-circle circle-yel d-flex flex-column justify-content-center align-items-center">
                     <p>DEVELOP</p>
                 </div>
                 <div class="w-100"></div>
-                <div class="col-3 rounded-circle myrounded-circle circle-grn d-flex flex-column justify-content-center align-items-center">
+                <div class="col-3 rounded-circle mybigrounded-circle circle-grn d-flex flex-column justify-content-center align-items-center">
                     <p>SUPPORT</p>
                 </div>
-                <div class="col-3 rounded-circle myrounded-circle circle-blu d-flex flex-column justify-content-center align-items-center">
+                <div class="col-3 rounded-circle mybigrounded-circle circle-blu d-flex flex-column justify-content-center align-items-center">
                     <p>HOST</p>
                 </div>
 
             </div>
 
         </div>
+<!--Start lower section-->
         <div class="d-flex flex-column align-items-center">
             <hr class="d-none d-md-block">
             <p>Selected Work</p>
+<!--card #1-->
             <div class="card" style="width: 18rem;">
-                <img src="img/apple-ipad.jpg" class="card-img-top" alt="...">
+                <img src="img/apple-ipad.jpg" class="card-img-top gray-border" alt="...">
+                <div class="card-body row justify-content-center">
+                    <div class=" col-3 rounded-circle mysmrounded-circle circle-red d-flex justify-content-center align-items-center">
+                        <p>D</p>
+                    </div>
+                    <div class=" col-3 rounded-circle mysmrounded-circle circle-yel d-flex justify-content-center align-items-center">
+                        <p>D</p>
+                    </div>
+                    <div class=" col-3 rounded-circle mysmrounded-circle circle-grn d-flex justify-content-center align-items-center">
+                        <p>D</p>
+                    </div>
+                    <div class=" col-3 rounded-circle mysmrounded-circle circle-blu d-flex justify-content-center align-items-center">
+                        <p>D</p>
+                    </div>
+                </div>
+            </div>
+<!--card #2-->
+            <div class="card" style="width: 18rem;">
+                <img src="img/macbook.jpg" class="card-img-top gray-border" alt="...">
                 <div class="card-body">
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
             </div>
+<!--Card #3-->
             <div class="card" style="width: 18rem;">
-                <img src="img/macbook.jpg" class="card-img-top" alt="...">
+                <img src="img/man.jpg" class="card-img-top gray-border" alt="...">
                 <div class="card-body">
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
             </div>
+<!--Card #4-->
             <div class="card" style="width: 18rem;">
-                <img src="img/man.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img src="img/security.jpg" class="card-img-top" alt="...">
+                <img src="img/security.jpg" class="card-img-top gray-border" alt="...">
                 <div class="card-body">
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
