Update our circles finally

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -10,30 +10,33 @@
 
 </head>
 <body>
-    <div class="container pg-background">
-        <div class="container row justify-content-center">
+    <div class="container pg-background ">
+        <div class="container row text-center">
             <header>
                 <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
                 <br>
                 <h2>FROM PARK CITY, UTAH</h2>
             </header>
-            <div class="row justify-content-center">
-                <div class="col-3 rounded-circle mybigrounded-circle circle-red d-flex flex-column justify-content-center align-items-center">
-                    <p>DESIGN</p>
+<!--          1.  This is the container within a container to control our circles and their content -->
+            <div class="row d-flex justify-content-center">
+                <div class="row col-12 justify-content-center">
+                    <div class="col-3 rounded-circle mybigrounded-circle circle-red d-flex flex-column justify-content-center align-items-center ">
+                        <p>DESIGN</p>
+                    </div>
+                    <div class="col-3 rounded-circle mybigrounded-circle circle-yel d-flex flex-column justify-content-center align-items-center">
+                        <p>DEVELOP</p>
+                    </div>
                 </div>
-                <div class="col-3 rounded-circle mybigrounded-circle circle-yel d-flex flex-column justify-content-center align-items-center">
-                    <p>DEVELOP</p>
+ <!--          2.  This is the container within a container to control our circles and their content -->
+                <div class="row col-12 justify-content-center">
+                    <div class="col-3 rounded-circle mybigrounded-circle circle-grn d-flex flex-column justify-content-center align-items-center">
+                        <p>SUPPORT</p>
+                    </div>
+                    <div class="col-3 rounded-circle mybigrounded-circle circle-blu d-flex flex-column justify-content-center align-items-center">
+                        <p>HOST</p>
+                     </div>
                 </div>
-                <div class="w-100"></div>
-                <div class="col-3 rounded-circle mybigrounded-circle circle-grn d-flex flex-column justify-content-center align-items-center">
-                    <p>SUPPORT</p>
-                </div>
-                <div class="col-3 rounded-circle mybigrounded-circle circle-blu d-flex flex-column justify-content-center align-items-center">
-                    <p>HOST</p>
-                </div>
-
             </div>
-
         </div>
 <!--Start lower section-->
         <div class="d-flex flex-column align-items-center">
