--- a/codeup-design.html
+++ b/codeup-design.html
@@ -16,10 +16,12 @@
                 <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
                 <br>
                 <h2>FROM PARK CITY, UTAH</h2>
+                <br><br>
             </header>
+
 <!--          1.  This is the container within a container to control our circles and their content -->
             <div class="row d-flex justify-content-center">
-                <div class="row col-12 justify-content-center">
+                <div class="row justify-content-center">
                     <div class="col-3 rounded-circle mybigrounded-circle circle-red d-flex flex-column justify-content-center align-items-center ">
                         <p>DESIGN</p>
                     </div>
