--- a/codeup-design.html
+++ b/codeup-design.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/cu-design.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Codeup Design</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container pg-background ">
@@ -22,7 +26,7 @@
 <!--          1.  This is the container within a container to control our circles and their content -->
             <div class="row d-flex justify-content-center">
                 <div class="row justify-content-center">
-                    <div class="col-3 rounded-circle mybigrounded-circle circle-red d-flex flex-column justify-content-center align-items-center ">
+                    <div class="col-3 rounded-circle mybigrounded-circle circle-red d-flex flex-column justify-content-center align-items-center">
                         <p>DESIGN</p>
                     </div>
                     <div class="col-3 rounded-circle mybigrounded-circle circle-yel d-flex flex-column justify-content-center align-items-center">
@@ -43,44 +47,90 @@
 <!--Start lower section-->
         <div class="d-flex flex-column align-items-center">
             <hr class="d-none d-md-block">
+            <br><br>
             <p>Selected Work</p>
 <!--card #1-->
-            <div class="card" style="width: 18rem;">
+            <div class="card" >
                 <img src="img/apple-ipad.jpg" class="card-img-top gray-border" alt="...">
-                <div class="card-body row justify-content-center">
-                    <div class=" col-3 rounded-circle mysmrounded-circle circle-red d-flex justify-content-center align-items-center">
-                        <p>D</p>
-                    </div>
-                    <div class=" col-3 rounded-circle mysmrounded-circle circle-yel d-flex justify-content-center align-items-center">
-                        <p>D</p>
-                    </div>
-                    <div class=" col-3 rounded-circle mysmrounded-circle circle-grn d-flex justify-content-center align-items-center">
-                        <p>D</p>
-                    </div>
-                    <div class=" col-3 rounded-circle mysmrounded-circle circle-blu d-flex justify-content-center align-items-center">
-                        <p>D</p>
-                    </div>
+                <div class="card-body d-flex ">
+                    <span>FEATURED PROJECT</span>
+                    <ul class="list-inline d-flex ms-auto">
+                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-red d-flex">
+                            <p>D</p>
+                        </li>
+                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-yel d-flex">
+                            <p>D</p>
+                        </li>
+                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-grn d-flex">
+                            <p>S</p>
+                        </li>
+                        <li class=" list-inline-item rounded-circle mysmrounded-circle circle-blu d-flex">
+                            <p>H</p>
+                        </li>
+                    </ul>
                 </div>
             </div>
 <!--card #2-->
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img src="img/macbook.jpg" class="card-img-top gray-border" alt="...">
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <div class="card-body d-flex ">
+                    <span>FEATURED PROJECT</span>
+                    <ul class="list-inline d-flex ms-auto">
+                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-red d-flex justify-content-center">
+                            <p>D</p>
+                        </li>
+                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-yel d-flex">
+                            <p>D</p>
+                        </li>
+                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-grn d-flex">
+                            <p>S</p>
+                        </li>
+                        <li class=" list-inline-item rounded-circle mysmrounded-circle circle-blu d-flex">
+                            <p>H</p>
+                        </li>
+                    </ul>
                 </div>
             </div>
 <!--Card #3-->
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img src="img/man.jpg" class="card-img-top gray-border" alt="...">
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <div class="card-body d-flex ">
+                    <span>FEATURED PROJECT</span>
+                    <ul class="list-inline d-flex ms-auto">
+                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-red d-flex justify-content-center">
+                            <p>D</p>
+                        </li>
+                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-yel d-flex">
+                            <p>D</p>
+                        </li>
+                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-grn d-flex">
+                            <p>S</p>
+                        </li>
+                        <li class=" list-inline-item rounded-circle mysmrounded-circle circle-blu d-flex">
+                            <p>H</p>
+                        </li>
+                    </ul>
                 </div>
             </div>
 <!--Card #4-->
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img src="img/security.jpg" class="card-img-top gray-border" alt="...">
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <div class="card-body d-flex ">
+                    <span>FEATURED PROJECT</span>
+                    <ul class="list-inline d-flex ms-auto">
+                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-red d-flex justify-content-center">
+                            <p>D</p>
+                        </li>
+                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-yel d-flex">
+                            <p>D</p>
+                        </li>
+                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-grn d-flex">
+                            <p>S</p>
+                        </li>
+                        <li class=" list-inline-item rounded-circle mysmrounded-circle circle-blu d-flex">
+                            <p>H</p>
+                        </li>
+                    </ul>
                 </div>
             </div>
 
