--- a/codeup-design.html
+++ b/codeup-design.html
@@ -14,128 +14,57 @@
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container pg-background ">
-        <div class="container row text-center">
-            <header>
-                <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
-                <br>
-                <h2>FROM PARK CITY, UTAH</h2>
-                <br><br>
-            </header>
+<div class="container text-center pg-background ">
+    <header>
+        <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
+        <br>
+        <h2>FROM PARK CITY, UTAH</h2>
+        <br><br>
+    </header>
 
-<!--          1.  This is the container within a container to control our circles and their content -->
-            <div class="row d-flex justify-content-center">
-                <div class="row justify-content-center">
-                    <div class="col-3 rounded-circle mybigrounded-circle circle-red d-flex flex-column justify-content-center align-items-center">
-                        <p>DESIGN</p>
-                    </div>
-                    <div class="col-3 rounded-circle mybigrounded-circle circle-yel d-flex flex-column justify-content-center align-items-center">
-                        <p>DEVELOP</p>
-                    </div>
-                </div>
- <!--          2.  This is the container within a container to control our circles and their content -->
-                <div class="row col-12 justify-content-center">
-                    <div class="col-3 rounded-circle mybigrounded-circle circle-grn d-flex flex-column justify-content-center align-items-center">
-                        <p>SUPPORT</p>
-                    </div>
-                    <div class="col-3 rounded-circle mybigrounded-circle circle-blu d-flex flex-column justify-content-center align-items-center">
-                        <p>HOST</p>
-                     </div>
-                </div>
-            </div>
+    <!--Big Circles Revamped!-->
+
+    <div class="row w-75 text-center mx-auto">
+        <div class="col-6 col-md-3 p-3">
+            <button class="rounded-circle mybigrounded-circle circle-red" type="button">DESIGN</button>
         </div>
+        <div class="col-6 col-md-3 p-3">
+            <button class="rounded-circle mybigrounded-circle circle-yel" type="button">DEVELOP</button>
+        </div>
+        <div class="col-6 col-md-3 p-3">
+            <button class="rounded-circle mybigrounded-circle circle-grn" type="button">SUPPORT</button>
+        </div>
+        <div class="col-6 col-md-3 p-3">
+            <button class="rounded-circle mybigrounded-circle circle-blu" type="button">HOST</button>
+        </div>
+    </div>
+<!--This is our line-->
+    <hr class="d-none d-md-block">
 <!--Start lower section-->
-        <div class="d-flex flex-column align-items-center">
-            <hr class="d-none d-md-block">
+        <div class="justify-content-center">
             <br><br>
             <p>Selected Work</p>
-<!--card #1-->
-            <div class="card" >
-                <img src="img/apple-ipad.jpg" class="card-img-top gray-border" alt="...">
-                <div class="card-body d-flex ">
-                    <span>FEATURED PROJECT</span>
-                    <ul class="list-inline d-flex ms-auto">
-                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-red d-flex">
-                            <p>D</p>
-                        </li>
-                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-yel d-flex">
-                            <p>D</p>
-                        </li>
-                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-grn d-flex">
-                            <p>S</p>
-                        </li>
-                        <li class=" list-inline-item rounded-circle mysmrounded-circle circle-blu d-flex">
-                            <p>H</p>
-                        </li>
-                    </ul>
+        </div>
+ <!--card #1-->
+            <section class="col-12 col-md-6 ">
+                <div class="card-group ">
+                    <div class="border-0 ">
+                        <img src="img/apple-ipad.jpg" alt=" ">
+                        <div class="card-footer d-flex">
+                            <small class="text-muted">FEATURED PROJECT</small>
+                            <section class="ms-auto">
+                                <span class="badge rounded-pill">D</span>
+                                <span class="badge rounded-pill">D</span>
+                                <span class="badge rounded-pill">S</span>
+                                <span class="badge rounded-pill">H</span>
+                            </section>
+                        </div>
+                    </div>
                 </div>
-            </div>
-<!--card #2-->
-            <div class="card">
-                <img src="img/macbook.jpg" class="card-img-top gray-border" alt="...">
-                <div class="card-body d-flex ">
-                    <span>FEATURED PROJECT</span>
-                    <ul class="list-inline d-flex ms-auto">
-                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-red d-flex justify-content-center">
-                            <p>D</p>
-                        </li>
-                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-yel d-flex">
-                            <p>D</p>
-                        </li>
-                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-grn d-flex">
-                            <p>S</p>
-                        </li>
-                        <li class=" list-inline-item rounded-circle mysmrounded-circle circle-blu d-flex">
-                            <p>H</p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-<!--Card #3-->
-            <div class="card">
-                <img src="img/man.jpg" class="card-img-top gray-border" alt="...">
-                <div class="card-body d-flex ">
-                    <span>FEATURED PROJECT</span>
-                    <ul class="list-inline d-flex ms-auto">
-                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-red d-flex justify-content-center">
-                            <p>D</p>
-                        </li>
-                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-yel d-flex">
-                            <p>D</p>
-                        </li>
-                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-grn d-flex">
-                            <p>S</p>
-                        </li>
-                        <li class=" list-inline-item rounded-circle mysmrounded-circle circle-blu d-flex">
-                            <p>H</p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-<!--Card #4-->
-            <div class="card">
-                <img src="img/security.jpg" class="card-img-top gray-border" alt="...">
-                <div class="card-body d-flex ">
-                    <span>FEATURED PROJECT</span>
-                    <ul class="list-inline d-flex ms-auto">
-                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-red d-flex justify-content-center">
-                            <p>D</p>
-                        </li>
-                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-yel d-flex">
-                            <p>D</p>
-                        </li>
-                        <li class="list-inline-item rounded-circle mysmrounded-circle circle-grn d-flex">
-                            <p>S</p>
-                        </li>
-                        <li class=" list-inline-item rounded-circle mysmrounded-circle circle-blu d-flex">
-                            <p>H</p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+            </section>
 
 
-         </div>
+            <!--card #2-->
 </div>
 
 
