--- a/codeup-design.html
+++ b/codeup-design.html
@@ -1,75 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/cu-design.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Codeup Design</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="css/cu-design.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<title>Codeup Design</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="container text-center pg-background ">
-    <header>
-        <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
-        <br>
-        <h2>FROM PARK CITY, UTAH</h2>
-        <br><br>
-    </header>
+	<header>
+		<h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
+		<br>
+		<h2>FROM PARK CITY, UTAH</h2>
+		<br><br>
+	</header>
 
-    <!--Big Circles Revamped!-->
+	<!--Big Circles Revamped!-->
 
-    <div class="row w-75 text-center mx-auto">
-        <div class="col-6 col-md-3 p-3">
-            <button class="rounded-circle mybigrounded-circle circle-red" type="button">DESIGN</button>
-        </div>
-        <div class="col-6 col-md-3 p-3">
-            <button class="rounded-circle mybigrounded-circle circle-yel" type="button">DEVELOP</button>
-        </div>
-        <div class="col-6 col-md-3 p-3">
-            <button class="rounded-circle mybigrounded-circle circle-grn" type="button">SUPPORT</button>
-        </div>
-        <div class="col-6 col-md-3 p-3">
-            <button class="rounded-circle mybigrounded-circle circle-blu" type="button">HOST</button>
-        </div>
-    </div>
-<!--This is our line-->
-    <hr class="d-none d-md-block">
-<!--Start lower section-->
-        <div class="justify-content-center">
-            <br><br>
-            <p>Selected Work</p>
-        </div>
- <!--card #1-->
-            <section class="col-12 col-md-6 ">
-                <div class="card-group ">
-                    <div class="border-0 ">
-                        <img src="img/apple-ipad.jpg" alt=" ">
-                        <div class="card-footer d-flex">
-                            <small class="text-muted">FEATURED PROJECT</small>
-                            <section class="ms-auto">
-                                <span class="badge rounded-pill">D</span>
-                                <span class="badge rounded-pill">D</span>
-                                <span class="badge rounded-pill">S</span>
-                                <span class="badge rounded-pill">H</span>
-                            </section>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-
-            <!--card #2-->
+	<div class="row w-75 text-center mx-auto">
+		<div class="col-6 col-md-3 p-3">
+			<button class="rounded-circle mybigrounded-circle circle-red" type="button">DESIGN</button>
+		</div>
+		<div class="col-6 col-md-3 p-3">
+			<button class="rounded-circle mybigrounded-circle circle-yel" type="button">DEVELOP</button>
+		</div>
+		<div class="col-6 col-md-3 p-3">
+			<button class="rounded-circle mybigrounded-circle circle-grn" type="button">SUPPORT</button>
+		</div>
+		<div class="col-6 col-md-3 p-3">
+			<button class="rounded-circle mybigrounded-circle circle-blu" type="button">HOST</button>
+		</div>
+	</div>
+	<!--This is our horizontal line-->
+	<hr class="d-none d-md-block">
+	<!--Start lower section-->
+	<div class="justify-content-center">
+		<br><br>
+		<p>Selected Work</p>
+	</div>
+<!--card #1-->
+	<section class="col-12 col-md-8 ">
+		<div class="card-group ">
+			<div class="border-0 ">
+				<img src="img/apple-ipad.jpg" width="100%" alt=" ">
+				<div class="card-footer d-flex">
+					<small class="text-muted">FEATURED PROJECT</small>
+					<section class="ms-auto">
+						<span class="badge rounded-pill circle-red text-dark">D</span>
+						<span class="badge rounded-pill circle-yel text-dark">D</span>
+						<span class="badge rounded-pill circle-grn text-dark">S</span>
+						<span class="badge rounded-pill circle-blu text-dark">H</span>
+					</section>
+				</div>
+			</div>
+		</div>
+	</section>
+<!--card #2-->
+	<section class="col-12 col-md-8 ">
+		<div class="card-group ">
+			<div class="border-0 ">
+				<img src="img/macbook.jpg" width="100%" alt=" ">
+				<div class="card-footer d-flex">
+					<small class="text-muted">FEATURED PROJECT</small>
+					<section class="ms-auto">
+						<span class="badge rounded-pill circle-red text-dark">D</span>
+						<span class="badge rounded-pill circle-yel text-dark">D</span>
+						<span class="badge rounded-pill circle-grn text-dark">S</span>
+						<span class="badge rounded-pill circle-blu text-dark">H</span>
+					</section>
+				</div>
+			</div>
+		</div>
+	</section>
+<!--card #3-->
+	<section class="col-12 col-md-8 ">
+		<div class="card-group ">
+			<div class="border-0 ">
+				<img src="img/man.jpg" width="100%" alt=" ">
+				<div class="card-footer d-flex">
+					<small class="text-muted">FEATURED PROJECT</small>
+					<section class="ms-auto">
+						<span class="badge rounded-pill circle-red text-dark">D</span>
+						<span class="badge rounded-pill circle-yel text-dark">D</span>
+						<span class="badge rounded-pill circle-grn text-dark">S</span>
+						<span class="badge rounded-pill circle-blu text-dark">H</span>
+					</section>
+				</div>
+			</div>
+		</div>
+	</section>
+<!--card #4-->
+	<section class="col-12 col-md-8 ">
+		<div class="card-group ">
+			<div class="border-0 ">
+				<img src="img/security.jpg" width="100%" alt=" ">
+				<div class="card-footer d-flex">
+					<small class="text-muted">FEATURED PROJECT</small>
+					<section class="ms-auto">
+						<span class="badge rounded-pill circle-red text-dark">D</span>
+						<span class="badge rounded-pill circle-yel text-dark">D</span>
+						<span class="badge rounded-pill circle-grn text-dark">S</span>
+						<span class="badge rounded-pill circle-blu text-dark">H</span>
+					</section>
+				</div>
+			</div>
+		</div>
+	</section>
 </div>
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+		crossorigin="anonymous"></script>
 </body>
 </html>
