--- a/codeup-design.html
+++ b/codeup-design.html
@@ -15,6 +15,25 @@
 </head>
 <body>
 <div class="container text-center pg-background ">
+	<nav class="navbar navbar-expand-lg navbar-light">
+		<div class="container-fluid">
+			<img src="img/logo.png" class="logo" alt="">
+			<a class="navbar-brand d-none d-lg-block" href="#">Codeup Design</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+				<div class="navbar-nav">
+					<a class="nav-link active" aria-current="page" href="#">SERVICES</a>
+					<a class="nav-link" href="#">WORK</a>
+					<a class="nav-link" href="#">BLOG</a>
+					<a class="nav-link" href="#">CONTACT</a>
+
+				</div>
+			</div>
+		</div>
+	</nav>
+	<br><br>
 	<header>
 		<h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
 		<br>
