--- a/codeup-design.html
+++ b/codeup-design.html
@@ -14,6 +14,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 </head>
 <body>
+<!--Begin Navbar-->
 <div class="container text-center pg-background ">
 	<nav class="navbar navbar-expand-lg navbar-light">
 		<div class="container-fluid">
@@ -28,21 +29,20 @@
 					<a class="nav-link" href="#">WORK</a>
 					<a class="nav-link" href="#">BLOG</a>
 					<a class="nav-link" href="#">CONTACT</a>
-
 				</div>
 			</div>
 		</div>
 	</nav>
+<!--End Navbar-->
 	<br><br>
+<!--Top Text Area-->
 	<header>
 		<h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
 		<br>
 		<h2>FROM PARK CITY, UTAH</h2>
 		<br><br>
 	</header>
-
 	<!--Big Circles Revamped!-->
-
 	<div class="row w-75 text-center mx-auto">
 		<div class="col-6 col-md-3 p-3">
 			<button class="rounded-circle mybigrounded-circle circle-red" type="button">DESIGN</button>
@@ -133,6 +133,7 @@
 		</div>
 	</section>
 </div>
+<!--Bootstrap Script-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 		crossorigin="anonymous"></script>
