--- a/codeup-design.html
+++ b/codeup-design.html
@@ -60,79 +60,101 @@
 	<!--This is our horizontal line-->
 	<hr class="d-none d-md-block">
 	<!--Start lower section-->
-	<div class="justify-content-center">
-		<br><br>
-		<p>Selected Work</p>
-	</div>
-<!--card #1-->
-	<section class="col-12 col-md-8 ">
-		<div class="card-group ">
-			<div class="border-0 ">
-				<img src="img/apple-ipad.jpg" width="100%" alt=" ">
-				<div class="card-footer d-flex">
-					<small class="text-muted">FEATURED PROJECT</small>
-					<section class="ms-auto">
-						<span class="badge rounded-pill circle-red text-dark">D</span>
-						<span class="badge rounded-pill circle-yel text-dark">D</span>
-						<span class="badge rounded-pill circle-grn text-dark">S</span>
-						<span class="badge rounded-pill circle-blu text-dark">H</span>
-					</section>
-				</div>
-			</div>
-		</div>
-	</section>
-<!--card #2-->
-	<section class="col-12 col-md-8 ">
-		<div class="card-group ">
-			<div class="border-0 ">
-				<img src="img/macbook.jpg" width="100%" alt=" ">
-				<div class="card-footer d-flex">
-					<small class="text-muted">FEATURED PROJECT</small>
-					<section class="ms-auto">
-						<span class="badge rounded-pill circle-red text-dark">D</span>
-						<span class="badge rounded-pill circle-yel text-dark">D</span>
-						<span class="badge rounded-pill circle-grn text-dark">S</span>
-						<span class="badge rounded-pill circle-blu text-dark">H</span>
-					</section>
-				</div>
-			</div>
-		</div>
-	</section>
-<!--card #3-->
-	<section class="col-12 col-md-8 ">
-		<div class="card-group ">
-			<div class="border-0 ">
-				<img src="img/man.jpg" width="100%" alt=" ">
-				<div class="card-footer d-flex">
-					<small class="text-muted">FEATURED PROJECT</small>
-					<section class="ms-auto">
-						<span class="badge rounded-pill circle-red text-dark">D</span>
-						<span class="badge rounded-pill circle-yel text-dark">D</span>
-						<span class="badge rounded-pill circle-grn text-dark">S</span>
-						<span class="badge rounded-pill circle-blu text-dark">H</span>
-					</section>
-				</div>
-			</div>
-		</div>
-	</section>
-<!--card #4-->
-	<section class="col-12 col-md-8 ">
-		<div class="card-group ">
-			<div class="border-0 ">
-				<img src="img/security.jpg" width="100%" alt=" ">
-				<div class="card-footer d-flex">
-					<small class="text-muted">FEATURED PROJECT</small>
-					<section class="ms-auto">
-						<span class="badge rounded-pill circle-red text-dark">D</span>
-						<span class="badge rounded-pill circle-yel text-dark">D</span>
-						<span class="badge rounded-pill circle-grn text-dark">S</span>
-						<span class="badge rounded-pill circle-blu text-dark">H</span>
-					</section>
-				</div>
-			</div>
-		</div>
-	</section>
+    <section class="col-12 col-md-8 ">
+        <div class="col-12 col-md-8 justify-content-center">
+            <br><br>
+            <p>Selected Work</p>
+        </div>
+    <!--card #1-->
+        <section class="col-12 col-md-8 ">
+            <div class="card-group ">
+                <div class="border-0 ">
+                    <img src="img/apple-ipad.jpg" width="100%" alt=" ">
+                    <div class="card-footer d-flex">
+                        <small class="text-muted">FEATURED PROJECT</small>
+                        <section class="ms-auto">
+                            <span class="badge rounded-pill circle-red text-dark">D</span>
+                            <span class="badge rounded-pill circle-yel text-dark">D</span>
+                            <span class="badge rounded-pill circle-grn text-dark">S</span>
+                            <span class="badge rounded-pill circle-blu text-dark">H</span>
+                        </section>
+                    </div>
+                </div>
+            </div>
+        </section>
+    <!--card #2-->
+        <section class="col-12 col-md-8 ">
+            <div class="card-group ">
+                <div class="border-0 ">
+                    <img src="img/macbook.jpg" width="100%" alt=" ">
+                    <div class="card-footer d-flex">
+                        <small class="text-muted">FEATURED PROJECT</small>
+                        <section class="ms-auto">
+                            <span class="badge rounded-pill circle-red text-dark">D</span>
+                            <span class="badge rounded-pill circle-yel text-dark">D</span>
+                            <span class="badge rounded-pill circle-grn text-dark">S</span>
+                            <span class="badge rounded-pill circle-blu text-dark">H</span>
+                        </section>
+                    </div>
+                </div>
+            </div>
+        </section>
+    <!--card #3-->
+        <section class="col-12 col-md-8 ">
+            <div class="card-group ">
+                <div class="border-0 ">
+                    <img src="img/man.jpg" width="100%" alt=" ">
+                    <div class="card-footer d-flex">
+                        <small class="text-muted">FEATURED PROJECT</small>
+                        <section class="ms-auto">
+                            <span class="badge rounded-pill circle-red text-dark">D</span>
+                            <span class="badge rounded-pill circle-yel text-dark">D</span>
+                            <span class="badge rounded-pill circle-grn text-dark">S</span>
+                            <span class="badge rounded-pill circle-blu text-dark">H</span>
+                        </section>
+                    </div>
+                </div>
+            </div>
+        </section>
+    <!--card #4-->
+        <section class="col-12 col-md-8 ">
+            <div class="card-group ">
+                <div class="border-0 ">
+                    <img src="img/security.jpg" width="100%" alt=" ">
+                    <div class="card-footer d-flex">
+                        <small class="text-muted">FEATURED PROJECT</small>
+                        <section class="ms-auto">
+                            <span class="badge rounded-pill circle-red text-dark">D</span>
+                            <span class="badge rounded-pill circle-yel text-dark">D</span>
+                            <span class="badge rounded-pill circle-grn text-dark">S</span>
+                            <span class="badge rounded-pill circle-blu text-dark">H</span>
+                        </section>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
+    <!--This is where "The Last" begins -->
+    <section class="col-12 col-md-4 ">
+        <div class="justify-content-center">
+            <br><br>
+            <p>THE LAST</p>
+        </div>
+        <div class="card mb-3">
+            <div class="row">
+                <div class="col-12 col-md-4">
+                    <img src="img/mobile-phone.jpg" class="logo "  alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body pg-background">
+                        <h5 class="card-title">THE ADMIN BAR AND ABSOLUTE POSITIONING</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
+
 <!--Bootstrap Script-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
