added new changes to main file

--- a/codeup-design-shane.html
+++ b/codeup-design-shane.html
@@ -62,13 +62,14 @@
 	<!--Start lower section-->
 <!--Added the below missing row div which allowed "The Last" to move up-->
 	<div class="row">
-    <section class="col-12 col-md-8">
-        <div class="col-12 col-md-8 justify-content-center">
+    <section class="col-12 col-lg-8">
+        <div class="col-12 col-lg-8 justify-content-center">
             <br><br>
             <p>Selected Work</p>
         </div>
     <!--card #1-->
-        <section class="col-12 col-md-6">
+		<div class="row">
+        <section class="col-12 col-md-6 col-lg-8">
             <div class="card-group ">
                 <div class="border-0 ">
                     <img src="img/apple-ipad.jpg" width="100%" alt=" ">
@@ -85,7 +86,7 @@
             </div>
         </section>
     <!--card #2-->
-        <section class="col-12 col-md-6">
+        <section class="col-12 col-md-6 col-lg-8">
             <div class="card-group ">
                 <div class="border-0 ">
                     <img src="img/macbook.jpg" width="100%" alt=" ">
@@ -101,8 +102,10 @@
                 </div>
             </div>
         </section>
+		</div>
     <!--card #3-->
-        <section class="col-12 col-md-6">
+		<div class="row">
+        <section class="col-12 col-md-6 col-lg-8">
             <div class="card-group ">
                 <div class="border-0 ">
                     <img src="img/man.jpg" width="100%" alt=" ">
@@ -119,7 +122,7 @@
             </div>
         </section>
     <!--card #4-->
-        <section class="col-12 col-md-6">
+        <section class="col-12 col-md-6 col-lg-8">
             <div class="card-group ">
                 <div class="border-0 ">
                     <img src="img/security.jpg" width="100%" alt=" ">
@@ -135,19 +138,20 @@
                 </div>
             </div>
         </section>
+		</div>
     </section>
     <!--This is where "The Last" begins -->
-    <section class="col-12 col-md-4 d-none d-lg-block">
+    <section class="d-none col-12 col-lg-4 d-lg-block">
         <div class="justify-content-center">
             <br><br>
             <p>THE LAST</p>
         </div>
         <div class="mb-3">
             <div class="row">
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-lg-4">
                     <img src="img/mobile-phone.jpg" class="logo "  alt="...">
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-lg-4">
                     <div class="card-body pg-background">
                         <h5 class="card-title">THE ADMIN BAR AND ABSOLUTE POSITIONING</h5>
                     </div>
