--- a/codeup-design.html
+++ b/codeup-design.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/cu-design.css">
+	<link rel="stylesheet" href="css/cu-design-shane.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<title>Codeup Design</title>
@@ -33,9 +33,9 @@
 			</div>
 		</div>
 	</nav>
-<!--End Navbar-->
+	<!--End Navbar-->
 	<br><br>
-<!--Top Text Area-->
+	<!--Top Text Area-->
 	<header>
 		<h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
 		<br>
@@ -60,99 +60,106 @@
 	<!--This is our horizontal line-->
 	<hr class="d-none d-md-block">
 	<!--Start lower section-->
-    <section class="col-12 col-md-8 ">
-        <div class="col-12 col-md-8 justify-content-center">
-            <br><br>
-            <p>Selected Work</p>
-        </div>
-    <!--card #1-->
-        <section class="col-12 col-md-8 ">
-            <div class="card-group ">
-                <div class="border-0 ">
-                    <img src="img/apple-ipad.jpg" width="100%" alt=" ">
-                    <div class="card-footer d-flex">
-                        <small class="text-muted">FEATURED PROJECT</small>
-                        <section class="ms-auto">
-                            <span class="badge rounded-pill circle-red text-dark">D</span>
-                            <span class="badge rounded-pill circle-yel text-dark">D</span>
-                            <span class="badge rounded-pill circle-grn text-dark">S</span>
-                            <span class="badge rounded-pill circle-blu text-dark">H</span>
-                        </section>
-                    </div>
-                </div>
-            </div>
-        </section>
-    <!--card #2-->
-        <section class="col-12 col-md-8 ">
-            <div class="card-group ">
-                <div class="border-0 ">
-                    <img src="img/macbook.jpg" width="100%" alt=" ">
-                    <div class="card-footer d-flex">
-                        <small class="text-muted">FEATURED PROJECT</small>
-                        <section class="ms-auto">
-                            <span class="badge rounded-pill circle-red text-dark">D</span>
-                            <span class="badge rounded-pill circle-yel text-dark">D</span>
-                            <span class="badge rounded-pill circle-grn text-dark">S</span>
-                            <span class="badge rounded-pill circle-blu text-dark">H</span>
-                        </section>
-                    </div>
-                </div>
-            </div>
-        </section>
-    <!--card #3-->
-        <section class="col-12 col-md-8 ">
-            <div class="card-group ">
-                <div class="border-0 ">
-                    <img src="img/man.jpg" width="100%" alt=" ">
-                    <div class="card-footer d-flex">
-                        <small class="text-muted">FEATURED PROJECT</small>
-                        <section class="ms-auto">
-                            <span class="badge rounded-pill circle-red text-dark">D</span>
-                            <span class="badge rounded-pill circle-yel text-dark">D</span>
-                            <span class="badge rounded-pill circle-grn text-dark">S</span>
-                            <span class="badge rounded-pill circle-blu text-dark">H</span>
-                        </section>
-                    </div>
-                </div>
-            </div>
-        </section>
-    <!--card #4-->
-        <section class="col-12 col-md-8 ">
-            <div class="card-group ">
-                <div class="border-0 ">
-                    <img src="img/security.jpg" width="100%" alt=" ">
-                    <div class="card-footer d-flex">
-                        <small class="text-muted">FEATURED PROJECT</small>
-                        <section class="ms-auto">
-                            <span class="badge rounded-pill circle-red text-dark">D</span>
-                            <span class="badge rounded-pill circle-yel text-dark">D</span>
-                            <span class="badge rounded-pill circle-grn text-dark">S</span>
-                            <span class="badge rounded-pill circle-blu text-dark">H</span>
-                        </section>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </section>
-    <!--This is where "The Last" begins -->
-    <section class="col-12 col-md-4 ">
-        <div class="justify-content-center">
-            <br><br>
-            <p>THE LAST</p>
-        </div>
-        <div class="card mb-3">
-            <div class="row">
-                <div class="col-12 col-md-4">
-                    <img src="img/mobile-phone.jpg" class="logo "  alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body pg-background">
-                        <h5 class="card-title">THE ADMIN BAR AND ABSOLUTE POSITIONING</h5>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+	<!--Added the below missing row div which allowed "The Last" to move up-->
+	<div class="row">
+		<section class="col-12 col-lg-8">
+			<div class="col-12 col-lg-8 justify-content-center">
+				<br><br>
+				<p>Selected Work</p>
+			</div>
+			<!--card #1-->
+			<div class="row">
+				<section class="col-12 col-md-6 col-lg-8">
+					<div class="card-group ">
+						<div class="border-0 ">
+							<img src="img/apple-ipad.jpg" width="100%" alt=" ">
+							<div class="card-footer d-flex">
+								<small class="text-muted">FEATURED PROJECT</small>
+								<section class="ms-auto">
+									<span class="badge rounded-pill circle-red text-dark">D</span>
+									<span class="badge rounded-pill circle-yel text-dark">D</span>
+									<span class="badge rounded-pill circle-grn text-dark">S</span>
+									<span class="badge rounded-pill circle-blu text-dark">H</span>
+								</section>
+							</div>
+						</div>
+					</div>
+				</section>
+				<!--card #2-->
+				<section class="col-12 col-md-6 col-lg-8">
+					<div class="card-group ">
+						<div class="border-0 ">
+							<img src="img/macbook.jpg" width="100%" alt=" ">
+							<div class="card-footer d-flex">
+								<small class="text-muted">FEATURED PROJECT</small>
+								<section class="ms-auto">
+									<span class="badge rounded-pill circle-red text-dark">D</span>
+									<span class="badge rounded-pill circle-yel text-dark">D</span>
+									<span class="badge rounded-pill circle-grn text-dark">S</span>
+									<span class="badge rounded-pill circle-blu text-dark">H</span>
+								</section>
+							</div>
+						</div>
+					</div>
+				</section>
+			</div>
+			<!--card #3-->
+			<div class="row">
+				<section class="col-12 col-md-6 col-lg-8">
+					<div class="card-group ">
+						<div class="border-0 ">
+							<img src="img/man.jpg" width="100%" alt=" ">
+							<div class="card-footer d-flex">
+								<small class="text-muted">FEATURED PROJECT</small>
+								<section class="ms-auto">
+									<span class="badge rounded-pill circle-red text-dark">D</span>
+									<span class="badge rounded-pill circle-yel text-dark">D</span>
+									<span class="badge rounded-pill circle-grn text-dark">S</span>
+									<span class="badge rounded-pill circle-blu text-dark">H</span>
+								</section>
+							</div>
+						</div>
+					</div>
+				</section>
+				<!--card #4-->
+				<section class="col-12 col-md-6 col-lg-8">
+					<div class="card-group ">
+						<div class="border-0 ">
+							<img src="img/security.jpg" width="100%" alt=" ">
+							<div class="card-footer d-flex">
+								<small class="text-muted">FEATURED PROJECT</small>
+								<section class="ms-auto">
+									<span class="badge rounded-pill circle-red text-dark">D</span>
+									<span class="badge rounded-pill circle-yel text-dark">D</span>
+									<span class="badge rounded-pill circle-grn text-dark">S</span>
+									<span class="badge rounded-pill circle-blu text-dark">H</span>
+								</section>
+							</div>
+						</div>
+					</div>
+				</section>
+			</div>
+		</section>
+		<!--This is where "The Last" begins -->
+		<section class="d-none col-12 col-lg-4 d-lg-block">
+			<div class="justify-content-center">
+				<br><br>
+				<p>THE LAST</p>
+			</div>
+			<div class="mb-3">
+				<div class="row">
+					<div class="col-12 col-lg-4">
+						<img src="img/mobile-phone.jpg" class="logo "  alt="...">
+					</div>
+					<div class="col-12 col-lg-4">
+						<div class="card-body pg-background">
+							<h5 class="card-title">THE ADMIN BAR AND ABSOLUTE POSITIONING</h5>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+	</div>
 </div>
 
 <!--Bootstrap Script-->
