corrected heading fonts

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -37,9 +37,9 @@
 	<br><br>
 	<!--Top Text Area-->
 	<header>
-		<h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
+		<h1 class="anton">VISUAL DESIGN & WEB DEVELOPMENT</h1>
 		<br>
-		<h2>FROM PARK CITY, UTAH</h2>
+		<h2 class="anton">FROM PARK CITY, UTAH</h2>
 		<br><br>
 	</header>
 	<!--Big Circles Revamped!-->
