assigned font family from top-to-bottom

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -19,16 +19,16 @@
 	<nav class="navbar navbar-expand-lg navbar-light">
 		<div class="container-fluid">
 			<img src="img/logo.png" class="logo" alt="">
-			<a class="navbar-brand d-none d-lg-block" href="#">Codeup Design</a>
+			<a class="navbar-brand d-none d-lg-block abel" href="#">Codeup Design</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 				<div class="navbar-nav">
-					<a class="nav-link active" aria-current="page" href="#">SERVICES</a>
-					<a class="nav-link" href="#">WORK</a>
-					<a class="nav-link" href="#">BLOG</a>
-					<a class="nav-link" href="#">CONTACT</a>
+					<a class="nav-link active abel" aria-current="page" href="#">SERVICES</a>
+					<a class="nav-link abel" href="#">WORK</a>
+					<a class="nav-link abel" href="#">BLOG</a>
+					<a class="nav-link abel" href="#">CONTACT</a>
 				</div>
 			</div>
 		</div>
@@ -65,7 +65,7 @@
 		<section class="col-12 col-lg-8">
 			<div class="col-12 col-lg-8 justify-content-center">
 				<br><br>
-				<p>Selected Work</p>
+				<p class="abel">SELECTED WORK</p>
 			</div>
 			<!--card #1-->
 			<div class="row">
@@ -74,7 +74,7 @@
 						<div class="border-0 ">
 							<img src="img/apple-ipad.jpg" width="100%" alt=" ">
 							<div class="card-footer d-flex">
-								<small class="text-muted">FEATURED PROJECT</small>
+								<small class="text-muted abel">FEATURED PROJECT</small>
 								<section class="ms-auto">
 									<span class="badge rounded-pill circle-red text-dark">D</span>
 									<span class="badge rounded-pill circle-yel text-dark">D</span>
@@ -91,7 +91,7 @@
 						<div class="border-0 ">
 							<img src="img/macbook.jpg" width="100%" alt=" ">
 							<div class="card-footer d-flex">
-								<small class="text-muted">FEATURED PROJECT</small>
+								<small class="text-muted abel">FEATURED PROJECT</small>
 								<section class="ms-auto">
 									<span class="badge rounded-pill circle-red text-dark">D</span>
 									<span class="badge rounded-pill circle-yel text-dark">D</span>
@@ -110,7 +110,7 @@
 						<div class="border-0 ">
 							<img src="img/man.jpg" width="100%" alt=" ">
 							<div class="card-footer d-flex">
-								<small class="text-muted">FEATURED PROJECT</small>
+								<small class="text-muted abel">FEATURED PROJECT</small>
 								<section class="ms-auto">
 									<span class="badge rounded-pill circle-red text-dark">D</span>
 									<span class="badge rounded-pill circle-yel text-dark">D</span>
@@ -127,7 +127,7 @@
 						<div class="border-0 ">
 							<img src="img/security.jpg" width="100%" alt=" ">
 							<div class="card-footer d-flex">
-								<small class="text-muted">FEATURED PROJECT</small>
+								<small class="text-muted abel">FEATURED PROJECT</small>
 								<section class="ms-auto">
 									<span class="badge rounded-pill circle-red text-dark">D</span>
 									<span class="badge rounded-pill circle-yel text-dark">D</span>
@@ -144,7 +144,7 @@
 		<section class="d-none col-12 col-lg-4 d-lg-block">
 			<div class="justify-content-center">
 				<br><br>
-				<p>THE LAST</p>
+				<p class="abel">THE LAST</p>
 			</div>
 			<div class="mb-3">
 				<div class="row">
@@ -153,7 +153,7 @@
 					</div>
 					<div class="col-12 col-lg-4">
 						<div class="card-body pg-background">
-							<h5 class="card-title">THE ADMIN BAR AND ABSOLUTE POSITIONING</h5>
+							<h5 class="card-title abel fw-bold">THE ADMIN BAR AND ABSOLUTE POSITIONING</h5>
 						</div>
 					</div>
 				</div>
